# pet_fastapi_1

./: .dockerignore  .gitignore  docker-compose-dev.yaml  docker-compose-prod.yaml  dockerfile  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: d055e86a1dd5_add_all_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: database.py  test_users.py
